; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net80211/extr_ieee80211_mesh.c_mesh_rt_del.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net80211/extr_ieee80211_mesh.c_mesh_rt_del.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_mesh_state = type { i32 }
%struct.ieee80211_mesh_route = type { i32 }

@rt_next = common dso_local global i32 0, align 4
@M_80211_MESH_RT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ieee80211_mesh_state*, %struct.ieee80211_mesh_route*)* @mesh_rt_del to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mesh_rt_del(%struct.ieee80211_mesh_state* %0, %struct.ieee80211_mesh_route* %1) #0 {
  %3 = alloca %struct.ieee80211_mesh_state*, align 8
  %4 = alloca %struct.ieee80211_mesh_route*, align 8
  store %struct.ieee80211_mesh_state* %0, %struct.ieee80211_mesh_state** %3, align 8
  store %struct.ieee80211_mesh_route* %1, %struct.ieee80211_mesh_route** %4, align 8
  %5 = load %struct.ieee80211_mesh_state*, %struct.ieee80211_mesh_state** %3, align 8
  %6 = getelementptr inbounds %struct.ieee80211_mesh_state, %struct.ieee80211_mesh_state* %5, i32 0, i32 0
  %7 = load %struct.ieee80211_mesh_route*, %struct.ieee80211_mesh_route** %4, align 8
  %8 = load i32, i32* @rt_next, align 4
  %9 = call i32 @TAILQ_REMOVE(i32* %6, %struct.ieee80211_mesh_route* %7, i32 %8)
  %10 = load %struct.ieee80211_mesh_route*, %struct.ieee80211_mesh_route** %4, align 8
  %11 = call i32 @MESH_RT_ENTRY_LOCK(%struct.ieee80211_mesh_route* %10)
  %12 = load %struct.ieee80211_mesh_route*, %struct.ieee80211_mesh_route** %4, align 8
  %13 = getelementptr inbounds %struct.ieee80211_mesh_route, %struct.ieee80211_mesh_route* %12, i32 0, i32 0
  %14 = call i32 @callout_drain(i32* %13)
  %15 = load %struct.ieee80211_mesh_route*, %struct.ieee80211_mesh_route** %4, align 8
  %16 = call i32 @MESH_RT_ENTRY_LOCK_DESTROY(%struct.ieee80211_mesh_route* %15)
  %17 = load %struct.ieee80211_mesh_route*, %struct.ieee80211_mesh_route** %4, align 8
  %18 = load i32, i32* @M_80211_MESH_RT, align 4
  %19 = call i32 @IEEE80211_FREE(%struct.ieee80211_mesh_route* %17, i32 %18)
  ret void
}

declare dso_local i32 @TAILQ_REMOVE(i32*, %struct.ieee80211_mesh_route*, i32) #1

declare dso_local i32 @MESH_RT_ENTRY_LOCK(%struct.ieee80211_mesh_route*) #1

declare dso_local i32 @callout_drain(i32*) #1

declare dso_local i32 @MESH_RT_ENTRY_LOCK_DESTROY(%struct.ieee80211_mesh_route*) #1

declare dso_local i32 @IEEE80211_FREE(%struct.ieee80211_mesh_route*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
